--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,52 @@
-﻿<Window x:Class="Boca_Danut_Lab5.MainWindow"
+﻿<Window x:Name="frmMain" x:Class="Boca_Danut_Lab5.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Boca_Danut_Lab5"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Phone Subscribers  Management" Height="541" Width="828" Loaded="frmMain_Loaded">
 
+
+    <Window.Resources>
+        <DataTemplate x:Key="PhoneNumbersTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding Phonenum}" Grid.Column="0"/>
+                <TextBlock Text="{Binding Subscriber}" Grid.Column="1"/>
+                <TextBlock Text="{Binding Contract_value}" Grid.Column="2"/>
+                <TextBlock Text="{Binding Contract_date}" Grid.Column="3"/>
+            </Grid>
+        </DataTemplate>
+        <local:PhoneNumbersDataSet x:Key="phoneNumbersDataSet"/>
+        <CollectionViewSource x:Key="phoneNumbersViewSource" Source="{Binding PhoneNumbers,
+            Source={StaticResource phoneNumbersDataSet}}"/>
+    </Window.Resources>
+
+
+    <Grid x:Name="grdMain" Loaded="grdMain_Loaded">
+        <Button x:Name="btnNew" Content="New" HorizontalAlignment="Left" Margin="34,44,0,0" VerticalAlignment="Top" Height="54" Width="72" Click="btnNew_Click"/>
+        <Button x:Name="btnEdit" Content="Edit " HorizontalAlignment="Left" Margin="26,126,0,0" VerticalAlignment="Top" Height="34" Width="88" Click="btnEdit_Click"/>
+        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="35,189,0,0" VerticalAlignment="Top" Height="51" Width="79" Click="btnDelete_Click"/>
+        <Button x:Name="btnSave" Content="Save " HorizontalAlignment="Left" Margin="283,411,0,0" VerticalAlignment="Top" IsEnabled="False" Height="34" Width="109" Click="btnSave_Click"/>
+        <Button x:Name="btnCancel" Content="Cancel " HorizontalAlignment="Left" Margin="604,408,0,0" VerticalAlignment="Top" IsEnabled="False" Height="40" Width="92" Click="btnCancel_Click"/>
+        <ListBox x:Name="lstPhones" Margin="273,61,41,285"  ItemsSource="{Binding}" IsSynchronizedWithCurrentItem="True" ItemTemplate="{StaticResource ResourceKey=PhoneNumbersTemplate}"/>
+        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Margin="26,288,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="54" Width="124" Click="btnExit_Click"/>
+        <Button x:Name="btnNext" Content="Next" HorizontalAlignment="Left" Margin="659,269,0,0" VerticalAlignment="Top" Height="38" Width="73" Click="btnNext_Click"/>
+        <Button x:Name="btnPrevious" Content="Previous" HorizontalAlignment="Left" Margin="282,272,0,0" VerticalAlignment="Top" Height="32" Width="110" Click="btnPrevious_Click"/>
+        <Label x:Name="lblPhoneNum" Content="PhoneNumber:" HorizontalAlignment="Left" Margin="312,309,0,0" VerticalAlignment="Top" Width="157" Height="33"/>
+        <Label x:Name="lblSubscriber" Content="Subscriber:" HorizontalAlignment="Left" Margin="317,357,0,0" VerticalAlignment="Top" Height="33" Width="121"/>
+        <TextBox x:Name="txtPhoneNumber" HorizontalAlignment="Left" Margin="437,309,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175" IsEnabled="False" Height="33" Text="{Binding Path=Phonenum}" />
+        <TextBox x:Name="txtSubscriber" HorizontalAlignment="Left" Margin="443,357,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" IsEnabled="False" Height="33" Text="{Binding Path=Subscriber}" />
+
+        <Label x:Name="lblContractvalue" Content="Contract value" HorizontalAlignment="Left" Margin="30,408,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtContractvalue" HorizontalAlignment="Left" Margin="136,417,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="118" IsEnabled="False" Height="17" Text="{Binding Path=Contractvalue}"/>
+        <Label x:Name="lblContractdate" Content="Contract date" HorizontalAlignment="Left" Margin="26,478,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtContractdate" HorizontalAlignment="Left" Margin="136,467,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="302" IsEnabled="False" Height="37" Text="{Binding Path=Contractdate}"/>
     </Grid>
 </Window>
